# majordomo-frameworks

./: CLAUDE.md  README.md  pyproject.toml
examples/: .env.example
examples/agno-support-agent/: README.md  main.py  pyproject.toml
examples/agno-support-agent/src/: __init__.py  main.py  models.py  support_agent.py
examples/pydantic-ai-research/: README.md  main.py  pyproject.toml
examples/pydantic-ai-research/src/: __init__.py  main.py  models.py  research_agent.py  tools.py
src/majordomo_frameworks/: __init__.py  agno.py  core.py  pydantic_ai.py
