[project]
name = "majordomo-frameworks"
version = "0.1.0"
description = "Framework adapters for routing LLM requests through Majordomo Gateway"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Vivek Vaidya", email = "vivek@superset.com" }
]
keywords = [
    "llm",
    "agno",
    "pydantic-ai",
    "majordomo",
    "gateway",
    "cost-tracking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
agno = ["agno>=1.0.0", "openai>=2.16.0"]
pydantic-ai = ["pydantic-ai>=1.54.0", "httpx>=0.28.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/majordomo_frameworks"]

[project.urls]
Homepage = "https://github.com/superset-studio/majordomo-oss/tree/main/majordomo-frameworks"
Repository = "https://github.com/superset-studio/majordomo-oss"
Issues = "https://github.com/superset-studio/majordomo-oss/issues"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.0",
]
